# atividade-2

./: .gitignore  README.md  pyproject.toml
EDA/: eda_dataset.ipynb
src/: flood_cluster_training_and_logging.ipynb
src_2/: classifier.py  data_processing.py  entrypoint.ipynb  mlflowIO.py  model_evaluation.py
