[tool.poetry]
name = "atividade2"
version = "0.1.0"
description = "atividade classificacao"
authors = ["arthurym <arthuryamamoto25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.3"
bs4 = "^0.0.2"
pre-commit = "^4.0.1"
numpy = "^2.1.0"
pytest = "^8.3.4"
logger = "^1.4"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.1"
pymongo = "^4.10.1"
requests = "^2.32.3"
pydantic = "^2.10.5"
mlflow = "^2.20.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
sweetviz = "^2.3.1"
summarytools = "^0.3.0"
ydata-profiling = "^4.12.2"
ipywidgets = "^8.1.5"
pyqt6 = "^6.8.1"
ipympl = "^0.9.6"
xgboost = "^2.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff] #https://docs.astral.sh/ruff/rules/
line-length = 150
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
]
exclude = [
    "EDA/",  # Ignore this folder
    "tests/",             # Example: Ignore the tests folder
]
[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.numpydoc_validation] #https://numpydoc.readthedocs.io/en/latest/validation.html
checks = [
    "GL08",  # Enforce docstring presence
    "RT03", #Return value has no description
]
exclude = [  # don't report on checks for these
    '\\.__init__$',
    '\\.__repr__$',
    '\\.__str__$',
    "EDA/",  # Ignore this folder
    "tests/",             # Example: Ignore the tests folder
]
override_SS05 = [  # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
